--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: post-index
-title: Recent Posts
-description: "Brain Dump of Sam McLeod"
+title:
+description: "smcleod.net"
 tags: [sam mcleod,devops,infracoders]
 comments: false
 share: True
