--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-#title: My website
+title: chicken scratchings with smcleod
 #subtitle: This is where I will tell my friends way too much about me
 ---
 
