--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: home
 feature_image: feature-san-fran
-title: Writer
-desc: Short stories from around the campfire for a fellow world explorer.
-include_cta_btn: true
+title: The blog of Sam McLeod
+desc: The blog of Sam McLeod
+include_cta_btn: false
 cta_text: Newsletter
 cta_link: /about/
 cta_icon: fa-user-plus
