update links in search talk

--- a/files/slides-Search-A-Journey-of-Delivery-on-a-Budget/index.html
+++ b/files/slides-Search-A-Journey-of-Delivery-on-a-Budget/index.html
@@ -103,7 +103,7 @@
 	<body>
 		<div class="reveal">
 			<aside class="slides-link"><h3>
-				<a href="http://ixa.io">http://ixa.io</a>
+				<a href="https://smcleod.net">https://smcleod.net</a>
 			</h3></aside>
 			<div class="slides">
 
@@ -126,7 +126,7 @@
 
 						<div class="pad-2">
 							<span style="font-size: 18px;">
-								<a href="http://ixa.io">ixa.io</a> | <a href="http://infoxchange.net.au">infoxchange.net.au</a>
+								<a href="https://smcleod.net">smcleod.net</a> | <a href="http://infoxchange.org">infoxchange.org</a>
 							</span>
 						</div>
 					</section>
@@ -888,8 +888,8 @@ recovery.concurrent_stream                       = 5</code></pre>
 						<div>Sam McLeod - <a href="https://twitter.com/s_mcleod">@s_mcleod</a></div>
 						<div>Ricky Cook - <a href="https://twitter.com/thatpandadev">@ThatPandaDev</a></div>
 						<div class="pad-2"></div>
-						<div>Infoxchange tech blog: <a href="ixa.io">ixa.io</a></div>
-						<div>Infoxchange website: <a href="infoxchange.net.au">infoxchange.net.au</a></div>
+						<div>smcleod.net: <a href="smcleod.net">smcleod.net</a></div>
+						<div>Infoxchange website: <a href="infoxchange.org">infoxchange.org</a></div>
 					</section>
 
 					<section data-background-image="img/496570-Rubber_bands_-_Colors_-_Studio_photo_2011.jpg">
