feat(agentic_coding_costs): add o3 and gemini 2.5 pro

--- a/static/tools/agentic_coding_costs/index.html
+++ b/static/tools/agentic_coding_costs/index.html
@@ -64,10 +64,12 @@
                     <select id="modelSelect">
                         <option value="claude_3_7_sonnet">Claude 3.7 Sonnet</option>
                         <option value="claude_3_5_haiku">Claude 3.5 Haiku</option>
-                        <option value="openai_o1">OpenAI o1</option>
-                        <option value="openai_o3_mini">OpenAI o3-mini</option>
+                        <option value="gemini_2_5_pro">Google Gemini 2.5 Pro</option>
                         <option value="deepseek_chat">DeepSeek Chat</option>
                         <option value="deepseek_r1">DeepSeek R1</option>
+                        <option value="openai_o3">OpenAI o3</option>
+                        <option value="openai_o1">OpenAI o1</option>
+                        <option value="openai_o3_mini">OpenAI o3-mini</option>
                         <option value="custom">Custom Pricing</option>
                     </select>
                 </div>
@@ -339,10 +341,12 @@
                 <select id="awsModelSelect">
                     <option value="claude_3_7_sonnet">Claude 3.7 Sonnet</option>
                     <option value="claude_3_5_haiku">Claude 3.5 Haiku</option>
-                    <option value="openai_o1">OpenAI o1</option>
-                    <option value="openai_o3_mini">OpenAI o3-mini</option>
+                    <option value="gemini_2_5_pro">Google Gemini 2.5 Pro</option>
                     <option value="deepseek_chat">DeepSeek Chat</option>
                     <option value="deepseek_r1">DeepSeek R1</option>
+                    <option value="openai_o3">OpenAI o3</option>
+                    <option value="openai_o1">OpenAI o1</option>
+                    <option value="openai_o3_mini">OpenAI o3-mini</option>
                     <option value="custom">Custom Pricing</option>
                 </select>
             </div>
